[package]
name = "client-cpp"
version = "0.1.0"
authors = ["The TiKV Project Authors"]
edition = "2018"

[lib]
name = "tikvrust"
crate-type = ["staticlib"]

[dependencies]
anyhow = "1"
cxx = "=1.0.75"
futures = "0.3"
once_cell = "1.9.0"
slog = {version = "2.7.0", features = ["max_level_debug", "release_max_level_warn"] }
slog-async = "2.7.0"
slog-term = "2.9.0"
slog-scope = "4.4.0"
slog-stdlog = "4.1.1"
log = { version = "0.4.17", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
chrono = "0.4.22"
grpcio = "=0.10.3"
openssl-sys = "=0.9.75"
tokio = { version = "=1.28.2", features = ["full"] }
env_logger = "0.9"
# tikv-client = { path = "../tikv-client-rust" }
tikv-client = { git = "https://github.com/FISCO-BCOS/tikv-client-rust.git", rev = "a9b002759d1358be5a48210adb9328568fe8bb20" }

[build-dependencies]
cxx-build = "1.0.18"
